# Advanced-Parallel-Programming

./: README.md
01_Sintassi_Base/: .ninja_deps  .ninja_log  01_variables.cpp  02_auto_and_decltype.cpp  03_blocks.cpp  04_pointer_and_ref.cpp  05_loops_and_conditions.cpp  06_const_and_pointers.cpp  07_basic_casts.cpp  08_memory_and_type.cpp  09_nullptr.cpp  10_pointer_arithmetics.cpp  CMakeCache.txt  CMakeLists.txt  Readme.md  build.ninja  cmake_install.cmake
02_Funzioni/: .ninja_deps  .ninja_log  01_functions_parameters.cpp  02_const_parameters.cpp  03_auto_functions.cpp  04_overloading.cpp  05_function_pointers.cpp  06_template.cpp  07_template_expressions.cpp  08_MCD_es1.cpp  09_hanoi.cpp  11_scambia.cpp  CMakeLists.txt  MCD_es1.cpp  Readme.md  radice_bisezione.cpp
03_Array_Memoria/: 01_arrays.cpp  02_arrays_and_pointers.cpp  03_function_arrays.cpp  04_dynamic_memory.cpp  05_fib_dynamic.cpp  06_smart_pointers.cpp  07_Eratosthenes.cpp  08_inserion_sort.cpp  09_numeri_primi.cpp  10_media_varianza.cpp  11_cambiamonete.cpp  CMakeLists.txt  Readme.md  print_array.hpp
04_Esercizi/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  esercizio1.cpp  esercizio2.cpp  esercizio5.cpp  rational.cpp  rational.hpp  shared_ptr.hpp  sorting.hpp
04_Strutture_Classi/: 01_structures.cpp  02_template_structures.cpp  03_public_private.cpp  04_classes.cpp  05_overload_op.cpp  06_template_classes_and_header.cpp  07_streams.cpp  08_string.cpp  09_namespaces.cpp  10_enum.cpp  11_scoped_enum.cpp  CMakeLists.txt  array.hpp  geometry.hpp  statistics.hpp
05_Semantica_CopyMove/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  array.hpp  array_copy.hpp  build.ninja  cmake_install.cmake  esempio1.cpp  esempio2.cpp  esempio3.cpp  rational.cpp  rational.hpp
06_Ereditarietà/: .ninja_deps  .ninja_log  01_inheritance_type.cpp  02_dynamic_cast.cpp  03_multiple_inheritance.cpp  04_overriding_and_virtual.cpp  05_pure_virtual.cpp  06_virtual_destroyer.cpp  07_final_methods.cpp  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
07_STL/: 01_array.cpp  02_vector.cpp  03_forward_list.cpp  04_list.cpp  05_deque.cpp  06_performances.cpp  06_vector_vs_deque  07_set_multiset.cpp  08_map_multimap.cpp  09_iterators.cpp  10_array_iterator.cpp  11_generating_by_iterator.cpp  12_functional.cpp  13_algorithms.cpp  CMakeLists.txt  array.hpp  common.hpp
08_Gestione_errori/: 01_try_catch.cpp  02_propagation.cpp  03_throw_noexcept.cpp  04_custom_exception.cpp  CMakeLists.txt
09_OpenCL/: CMakeLists.txt  README.md  array_sum.c  array_sum.cl  array_sum_comparison.cpp  cached_matrix_mult.cl  matrix_mult.cl  matrix_mult_comparison.cpp  opencl_info.cpp  opencl_processor.hpp  pyopecl_info.py
